# esp-main-sensors-board

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.bsp.esp32_s3_lcd_ev_board  sdkconfig.defaults
components/espnow_driver/: CMakeLists.txt  Kconfig.projbuild  espnow_driver.c  espnow_driver.h
components/http_server/: CMakeLists.txt  Kconfig.projbuild  http_server.c  http_server.h
components/sensors/: CMakeLists.txt  idf_component.yml
components/sensors/inc/: GP2Y0A41SK0F.h  HC-SR04.h  VL53L1X.h  sensors.h
components/sensors/inc/vl53l1x_lib/platform/: vl53l1_platform_user_data.h  vl53l1_platform_user_defines.h
components/sensors/src/: GP2Y0A41SK0F.c  HC-SR04.c  VL53L1X.c  sensors.c
components/sensors/src/vl53l1x_lib/platform/: vl53l1_platform.c
components/softap/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  softap.c  softap.h
main/: CMakeLists.txt  main.c
